// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guides for on-premise 1`] = `
<div
  className="modal-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited onboarding"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.header
      </h1>
      <div
        className="page-actions"
      >
        <a
          className="js-skip text-muted"
          href="#"
          onClick={[Function]}
        >
          tutorials.skip
        </a>
        <p
          className="note"
        >
          tutorials.find_it_back_in_help
        </p>
      </div>
      <div
        className="page-description"
      >
        onboarding.header.description.2
      </div>
    </header>
    <TokenStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={false}
      onContinue={[Function]}
      onOpen={[Function]}
      open={true}
      stepNumber={1}
    />
    <AnalysisStep
      onFinish={[Function]}
      onReset={[Function]}
      open={false}
      sonarCloud={false}
      stepNumber={2}
    />
  </div>
</div>
`;

exports[`guides for on-premise 2`] = `
<div
  className="modal-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.header"
    titleTemplate="%s"
  />
  <div
    className="page page-limited onboarding"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.header
      </h1>
      <div
        className="page-actions"
      >
        <a
          className="js-skip text-muted"
          href="#"
          onClick={[Function]}
        >
          tutorials.skip
        </a>
        <p
          className="note"
        >
          tutorials.find_it_back_in_help
        </p>
      </div>
      <div
        className="page-description"
      >
        onboarding.header.description.2
      </div>
    </header>
    <TokenStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={true}
      onContinue={[Function]}
      onOpen={[Function]}
      open={false}
      stepNumber={1}
    />
    <AnalysisStep
      onFinish={[Function]}
      onReset={[Function]}
      open={true}
      sonarCloud={false}
      stepNumber={2}
      token="abcd1234"
    />
  </div>
</div>
`;

exports[`guides for sonarcloud 1`] = `
<div
  className="modal-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.header.sonarcloud"
    titleTemplate="%s"
  />
  <div
    className="page page-limited onboarding"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.header.sonarcloud
      </h1>
      <div
        className="page-actions"
      >
        <a
          className="js-skip text-muted"
          href="#"
          onClick={[Function]}
        >
          tutorials.skip
        </a>
        <p
          className="note"
        >
          tutorials.find_it_back_in_plus
        </p>
      </div>
      <div
        className="page-description"
      >
        onboarding.header.description.3
      </div>
    </header>
    <OrganizationStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={false}
      onContinue={[Function]}
      onOpen={[Function]}
      open={true}
      stepNumber={1}
    />
    <TokenStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={false}
      onContinue={[Function]}
      onOpen={[Function]}
      open={false}
      stepNumber={2}
    />
    <AnalysisStep
      onFinish={[Function]}
      onReset={[Function]}
      open={false}
      sonarCloud={true}
      stepNumber={3}
    />
  </div>
</div>
`;

exports[`guides for sonarcloud 2`] = `
<div
  className="modal-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.header.sonarcloud"
    titleTemplate="%s"
  />
  <div
    className="page page-limited onboarding"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.header.sonarcloud
      </h1>
      <div
        className="page-actions"
      >
        <a
          className="js-skip text-muted"
          href="#"
          onClick={[Function]}
        >
          tutorials.skip
        </a>
        <p
          className="note"
        >
          tutorials.find_it_back_in_plus
        </p>
      </div>
      <div
        className="page-description"
      >
        onboarding.header.description.3
      </div>
    </header>
    <OrganizationStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={true}
      onContinue={[Function]}
      onOpen={[Function]}
      open={false}
      stepNumber={1}
    />
    <TokenStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={false}
      onContinue={[Function]}
      onOpen={[Function]}
      open={true}
      stepNumber={2}
    />
    <AnalysisStep
      onFinish={[Function]}
      onReset={[Function]}
      open={false}
      organization="my-org"
      sonarCloud={true}
      stepNumber={3}
    />
  </div>
</div>
`;

exports[`guides for sonarcloud 3`] = `
<div
  className="modal-container"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="onboarding.header.sonarcloud"
    titleTemplate="%s"
  />
  <div
    className="page page-limited onboarding"
  >
    <header
      className="page-header"
    >
      <h1
        className="page-title"
      >
        onboarding.header.sonarcloud
      </h1>
      <div
        className="page-actions"
      >
        <a
          className="js-skip text-muted"
          href="#"
          onClick={[Function]}
        >
          tutorials.skip
        </a>
        <p
          className="note"
        >
          tutorials.find_it_back_in_plus
        </p>
      </div>
      <div
        className="page-description"
      >
        onboarding.header.description.3
      </div>
    </header>
    <OrganizationStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={true}
      onContinue={[Function]}
      onOpen={[Function]}
      open={false}
      stepNumber={1}
    />
    <TokenStep
      currentUser={
        Object {
          "isLoggedIn": true,
          "login": "admin",
        }
      }
      finished={true}
      onContinue={[Function]}
      onOpen={[Function]}
      open={false}
      stepNumber={2}
    />
    <AnalysisStep
      onFinish={[Function]}
      onReset={[Function]}
      open={true}
      organization="my-org"
      sonarCloud={true}
      stepNumber={3}
      token="abcd1234"
    />
  </div>
</div>
`;
